[tool.poetry]
name = "wayback-google-analytics"
version = "0.2.3"
description = "A tool for gathering current and historic google analytics ids from multiple websites"
authors = ["Justin Clark <jclarksummit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
wayback-google-analytics = "wayback_google_analytics.main:main_entrypoint"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
async-timeout = "4.0.3"
asyncio = "3.4.3"
asynctest = "0.13.0"
attrs = "23.1.0"
beautifulsoup4 = "4.12.2"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
coverage = "7.3.2"
et-xmlfile = "1.1.0"
frozenlist = "1.4.0"
idna = "3.4"
multidict = "6.0.4"
numpy = "1.26.0"
openpyxl = "3.1.2"
pandas = "2.1.1"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pytz = "2023.3.post1"
requests = "2.31.0"
six = "1.16.0"
soupsieve = "2.5"
tzdata = "2023.3"
urllib3 = "2.0.6"
xlsxwriter = "3.1.5"
yarl = "1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
